<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/club_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/halmasuk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/UT"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/club_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sambutan"
            android:textSize="16sp"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="135dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nama"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="59dp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            />

        <ImageButton
            android:id="@+id/my_image_button"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/button1"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="178dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:ignore="MissingConstraints"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/Button"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="178dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:onClick="KeBeranda"
            tools:ignore="MissingConstraints"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>