<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UT"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="18dp"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf=" parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/HalBeranda"
            android:textSize="15sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="27dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="KeProfile"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/AK"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar1"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginTop="27dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar1"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginEnd="18dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar2"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/A"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar1"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginTop="26dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar1"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            />

        <ImageView
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginTop="26dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gambar1"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="87dp"
            android:text="@string/JudulLogo"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="18dp"
            android:justificationMode="inter_word"
            android:text="Universitas Trunojoyo berhasil meraih juara 1 dalam ajang perlombaan debat nasional yang diselenggarakan oleh..."
            android:textSize="11sp"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/JudulLogo"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="18dp"
            android:justificationMode="inter_word"
            android:text="Universitas Trunojoyo berhasil meraih juara 1 dalam ajang perlombaan debat nasional yang diselenggarakan oleh..."
            android:textSize="11sp"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/JudulLogo"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="15dp"
            android:text="Universitas Trunojoyo berhasil meraih juara 1 dalam ajang perlombaan debat nasional yang diselenggarakan oleh..."
            android:textSize="11sp"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>